bitpop_specific/extensions/facebook_friends/css/sidebar.css
/*
html {
  border-left: solid 1px #ccc;
}
*/
html, body {
  /*
  overflow: hidden;
  width: 186px;
  */
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 12px;
}
html {
  -webkit-border-start: 1px solid #c6c9ce;
  background: -webkit-linear-gradient(rgba(234, 238, 243, 0.2), #eaeef3),
  -webkit-linear-gradient(right, #eaeef3, #eaeef3 97%, #d3d7db);
}
body {
  overflow: hidden;
}
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}
ul li {
  border-bottom: 1px solid #ccc;
  display: block;
  margin: 0;
  padding: 3px;
  width: 179px;
  /*background-color: white;
  */
  cursor: pointer;
}
ul li:first-child { border-top: 1px solid #ccc }
ul li:hover { background-color: #eee; }
ul li img {
  vertical-align:middle;
  width: 32px;
  height: 32px;
  padding-right: 5px;
}
ul li img.status {
  width: 12px;
  height: 12px;
  margin-left: 3px;
}
span.leftSide {
  display: inline-block;
  width: 160px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#unavail { float: left; padding-left: 3px }
#login { float:right; padding-right: 3px }
#logout { float:right; clear: right; padding-right: 3px }
.disabled { opacity: 0.4; }
.clr { clear: both; overflow: hidden; height: 1px }

#slide-wrap {
  float: left;
  width: 185px;
  overflow:hidden;
  height:100%;
}

#inner-wrap {
  float: left;
  margin-right: -30000px;
  height: 100%;
}
.content-item {
  float:left;
  width: 185px;
}
#login-content {
  display: table;
  height: 100%;
  margin-top: -100px;
}
#login-centered {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}
.btn {
  margin: 0;
  cursor: pointer;
  display: inline-block;
  padding: 5px 14px 6px;
  font-size: 13px;
  line-height: normal;
  border: 1px solid #CCC;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),
    0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),
    0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-transition: 0.1s linear all;

  color: white;
  background-color: #0064CD;
  background-repeat: repeat-x;
  background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}
.btn:hover {
  background-position: 0 -15px;
  color: #333;
  text-decoration: none;
}
.btn:focus {
  outline: 1px dotted #666;
}
.btn:active {
  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
}
.box, .box .antiscroll-inner {
  width: 100%;
}
#search-wrap {
  width: 100%;
  padding-left:3px;
  margin-bottom: 5px;
}
#search {
  width: 75%;
}

